# prefab

./: .gitignore  Cargo.toml  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml
src/server/: main.rs
