[package]
name = "prefab-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", default-features = false, features = [
    "macros",
    "cookies",
] }
chrono="0.4.31"
clap = {version = "4.4.7", features = ["derive"]}
diesel = "2.1.3"
diesel_migrations = "2.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
tera="1.19.1"

[[bin]]
name = "prefab"
path = "src/server/main.rs"
